# game2012

./: .gitignore  imgui.ini  meson.build
data/: background.fs.glsl  background.vs.glsl  box.model  box.mtl  cubemap.fs.glsl  cubemap.vs.glsl  helmet.fs.glsl  helmet.vs.glsl  model.fs.glsl  model.vs.glsl  monkey.model  perlin.fs.glsl  perlin.vs.glsl  ring.model  square.vs.glsl  text.model
data/flight_helmet/: helmet.mtl
src/: camera.h  common.h  cubemap.cpp  cubemap.h  gui.cpp  gui.h  main.cpp  mesh.cpp  mesh.h  obj.cpp  program.cpp  program.h  texture.cpp
src/imgui/: imconfig.h
src/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.h
src/simcoe/core/: panic.h
src/simcoe/math/: consts.h  hash.h  math.h  units.h
subprojects/stb/: meson.build
